# Proteus-Flux-Attention

./: .gitignore  MANIFEST.in  README.md  TinyPlayground.ipynb  pyproject.toml  tinytoy_run.txt
docs/: FLUX_GUIDE.md  proteus_integration_guide.md
examples/: __init__.py  common.py  eval_generate.py  modeling.py  train_baseline.py  train_context_mastery.py  train_context_slide.py  train_dense_baseline.py
scripts/: autotune_blocks.py  check_install.py  chunked_flux.py  chunked_flux_smoke.py  chunked_flux_tests.py  chunked_shortlist.py  chunked_shortlist_smoke.py  chunked_shortlist_tests.py  parse_ctx_log.py  proteus_convertor.py  proteus_trainer.py  run_fluxchunk_sweep.py  run_shortlist_sweep.py  train_sliding_ctx.py
scripts/samples/: flux_sample.txt
src/protean_forge/: __init__.py
src/protean_forge/examples/: dmoah_train.py
src/protean_forge/kernels/: __init__.py  sparse_attn.py  tinytoy.py
src/protean_forge/models/: __init__.py  dmoah.py
src/protean_forge/modules/: __init__.py  genetic_multihead.py  sparse_ctl.py
src/proteus_attention/: __init__.py
src/proteus_attention/examples/: aspa_train.py  dmoah_train.py
src/proteus_attention/integration/: __init__.py  hf_adapter.py
src/proteus_attention/kernels/: __init__.py  sparse_attn.py  tinytoy.py
src/proteus_attention/kernels/aspa_cuda/: __init__.py  aspa_cuda.cpp
src/proteus_attention/kernels/dmoah_cuda/: __init__.py  dmoah_cuda.cpp
src/proteus_attention/models/: __init__.py  aspa.py  dmoah.py
src/proteus_attention/modules/: __init__.py  aspa_multihead.py  genetic_multihead.py  sparse_ctl.py  transformer_block.py
src/proteus_attention/tools/: __init__.py  chunked_flux.py  chunked_shortlist.py
tests/: conftest.py  test_aspa.py  test_chunked_flux_tool.py  test_chunked_shortlist_tool.py  test_dmoah.py  test_dropin_attention.py  test_examples_smoke.py  test_rope_integration.py  test_tinytoy_guardrails.py
