[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteus-attention"
version = "0.1.0"
description = "Adaptive Sparse Proto Attention (ASPA) modules powered by the Dynamic Mixture-of-Attention-Heads architecture."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Scott Dietz" }]
keywords = ["attention", "sparse-attention", "proteus", "shortlist", "triton", "deep-learning"]
license = "Apache-2.0"
dependencies = [
    "torch>=2.1",
    "transformers>=4.37",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
gpu = ["triton>=2.1"]
dev = ["pytest>=7"]
examples = ["matplotlib>=3.7", "tiktoken>=0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
